# project-manager

./: .gitignore  README.md  poetry.toml  pyproject.toml  requirements.txt
patches/: project_manager.patch
project_manager/: __init__.py  common_ps_commands.py  conda_env_manager.py  git_project_manager.py  poetry_project_manager.py  project_manager.py
tests/: requirements.txt  test_conda_env_manager.py  test_project_manager.py
